--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,11 +1,11 @@
 - normal:
-    content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by IEEE Transactions on Image Processing."
+    content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by IEEE TIP."
 - normal:
     content:  "<strong>Sept. 2020:</strong> I serve as a PC member in AAAI 2021 and IJCAI 2021."
 - normal:
-    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JÂA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by International Journal of Computer Vision."
+    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JÂA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by IJCV."
 - normal:
-    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE Transactions on Affective Computing."
+    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE TAFFC."
 - normal:
     content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by ECCV 2018."
 - normal:
