--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by IEEE TAFFC."
+- normal:
     content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by IEEE TIP."
 - normal:
     content:  "<strong>Sept. 2020:</strong> I serve as a PC member in AAAI 2021 and IJCAI 2021."
