--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,14 +1,14 @@
 - normal:
-    content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by IEEE TAFFC."
+    content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
-    content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by IEEE TIP."
+    content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by <i>IEEE TIP</i>."
 - normal:
-    content:  "<strong>Sept. 2020:</strong> I serve as a PC member in AAAI 2021 and IJCAI 2021."
+    content:  "<strong>Sept. 2020:</strong> I serve as a PC member in <i>AAAI 2021</i> and <i>IJCAI 2021</i>."
 - normal:
-    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JÂA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by IJCV."
+    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JÂA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by <i>IJCV</i>."
 - normal:
-    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by IEEE TAFFC."
+    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
-    content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by ECCV 2018."
+    content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by <i>ECCV 2018</i>."
 - normal:
     content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>."
