--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,61 @@
+- title: 'Unconstrained Facial Action Unit Detection via Latent Feature Domain'
+  #date:  'Jul. 2018'
+  imgurl: '/images/projects/2021/shao2021unconstrained.png'
+  selected: true
+  authors:
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Jianfei Cai
+      url:  'https://research.monash.edu/en/persons/jianfei-cai/'
+    - name: Tat-Jen Cham
+      url:  'https://personal.ntu.edu.sg/astjcham/index.html'  
+    - name: Xuequan Lu
+      url:  http://www.xuequanlu.com/
+    - name: Lizhuang Ma
+      url:  'http://dmcv.sjtu.edu.cn/people'  
+  publisher:  'IEEE Transactions on Affective Computing, 2021'
+  status:   '(CCF B, SCI Q2)'
+  #place:   'in San Diego, USA'
+  desc: 'We propose an end-to-end unconstrained facial AU detection framework based on domain adaptation, which transfers accurate AU labels from a constrained source domain to an unconstrained target domain by exploiting labels of AU-related facial landmarks. Specifically, we map a source image with label and a target image without label into a latent feature domain by combining source landmark-related feature with target landmark-free feature. Due to the combination of source AU-related information and target AU-free information, the latent feature domain with transferred source label can be learned by maximizing the target-domain AU detection performance. Moreover, we introduce a novel landmark adversarial loss to disentangle the landmark-free feature from the landmark-related feature by treating the adversarial learning as a multi-player minimax game.'
+  tags:
+    - name: 'arXiv'
+      url:  'https://arxiv.org/abs/1903.10143'
+    - name: 'code'
+      url:  'https://github.com/ZhiwenShao/ADLD'  
+    #- name: 'pdf'
+    #  url:  'https://zhiwenshao.github.io/pdfs/projects/2017/zhu2017better.pdf'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+    
+- title: 'Sketch-to-Photo Face Generation Based on Semantic Consistency Preserving and Similar Connected Component Refinement'
+  #date:  'Jul. 2020'
+  imgurl: '/images/projects/2021/li2021sketch.png'
+  selected: true
+  authors:
+    - name: Luying Li
+      url:  false
+    - name: Junshu Tang
+      url:  false
+    - name: <strong>Zhiwen Shao*</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Xin Tan
+      url:  false
+    - name: Lizhuang Ma
+      url:  'http://dmcv.sjtu.edu.cn/people'  
+  publisher:  'The Visual Computer (TVC), 2021'
+  status:   '(CCF C, SCI Q4)'
+  #place:   'in London, United Kingdom'
+  desc: 'We propose a two-stage sketch-to-photo generative adversarial network for face generation. In the first stage, we propose a semantic loss to maintain semantic consistency. In the second stage, we define the similar connected component and propose a color refinement loss to generate fine-grained details. Moreover, we introduce a multi-scale discriminator and design a patch-level local discriminator. We also propose a texture loss to enhance the local fidelity of synthesized images.'
+  tags:
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/2004.09769'
+    #- name: 'pdf'
+    #  url:  'https://zhiwenshao.github.io/pdfs/projects/2017/shao2017learning.pdf'
+    #- name: 'code'
+    #  url:  'https://github.com/junshutang/EGGAN'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+
 - title: 'Explicit Facial Expression Transfer via Fine-Grained Representations'
   #date:  'Jul. 2018'
   imgurl: '/images/projects/2021/shao2021explicit.png'
