--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Jul. 2021:</strong> I serve as a PC member in <i>IJCAI 2022</i>."
+- normal:
     content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
 - normal:
     content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by <i>IEEE TIP</i>."
