--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,16 +1,8 @@
 - normal:
-    content:  "<strong>Aug. 2021:</strong> I serve as a PC member in <i>AAAI 2022</i> and <i>IJCAI 2022</i>."
+    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>
 - normal:
-    content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
+    content:  "<strong>2021:</strong> <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>
 - normal:
-    content:  "<strong>Apr. 2021:</strong> Our paper <strong>Explicit Facial Expression Transfer via Fine-Grained Representations</strong> is accepted by <i>IEEE TIP</i>."
+    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the Fundamental Research Funds for the Central Universities</strong>
 - normal:
-    content:  "<strong>Sept. 2020:</strong> I serve as a PC member in <i>AAAI 2021</i> and <i>IJCAI 2021</i>."
-- normal:
-    content:  "<strong>Aug. 2020:</strong> Our paper <strong>JÂA-Net: Joint Facial Action Unit Detection and Face Alignment via Adaptive Attention</strong> is accepted by <i>IJCV</i>."
-- normal:
-    content:  "<strong>Oct. 2019:</strong> Our paper <strong>Facial Action Unit Detection Using Attention and Relation Learning</strong> is accepted by <i>IEEE TAFFC</i>."
-- normal:
-    content:  "<strong>Jul. 2018:</strong> Our paper <strong>Deep Adaptive Attention for Joint Facial Action Unit Detection and Face Alignment</strong> is accepted by <i>ECCV 2018</i>."
-- normal:
-    content:  "<strong>Nov. 2017:</strong> I am now studying at Multimedia and Interactive Computing Lab of <strong>Nanyang Technological University (NTU)</strong>, Singapore as a Research Assistant, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai/'>Prof. Jianfei Cai</a>."
+    content:  "<strong>2020:</strong> <strong>Start-Up Grant of China University of Mining and Technology</strong>
