--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,8 @@
 - normal:
-    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>
+    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>"
 - normal:
-    content:  "<strong>2021:</strong> <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>
+    content:  "<strong>2021:</strong> <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>"
 - normal:
-    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the Fundamental Research Funds for the Central Universities</strong>
+    content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the Fundamental Research Funds for the Central Universities</strong>"
 - normal:
-    content:  "<strong>2020:</strong> <strong>Start-Up Grant of China University of Mining and Technology</strong>
+    content:  "<strong>2020:</strong> <strong>Start-Up Grant of China University of Mining and Technology</strong>"
