--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>Jun. 2022:</strong> Our paper <strong>TextDCT: Arbitrary-Shaped Text Detection via Discrete Cosine Transform Mask</strong> is accepted by <i>IEEE TMM</i>."
+- normal:
     content:  "<strong>Aug. 2021:</strong> I serve as a PC member in <i>AAAI 2022</i> and <i>IJCAI 2022</i>."
 - normal:
     content:  "<strong>Jun. 2021:</strong> Our paper <strong>Unconstrained Facial Action Unit Detection via Latent Feature Domain</strong> is accepted by <i>IEEE TAFFC</i>."
