--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Zhiwen Shao (邵志文)
 description:
-  en: "This is an academic website for Zhiwen Shao to share his experiences, projects, publications, and posts. Zhiwen Shao is now a Ph.D. candidate in the Department of Computer Science and Engineering, Shanghai Jiao Tong University, China, advised by Prof. Lizhuang Ma. His research interests lie in the field of Face Analysis and Deep Learning, particularly in Face Alignment and Facial Expression Recognition. "
+  en: "* Corresponding author. † Equal contribution. This is an academic website for Zhiwen Shao to share his experiences, projects, publications, and posts. Zhiwen Shao is now a Ph.D. candidate in the Department of Computer Science and Engineering, Shanghai Jiao Tong University, China, advised by Prof. Lizhuang Ma. His research interests lie in the field of Face Analysis and Deep Learning, particularly in Face Alignment and Facial Expression Recognition. "
   cn: "这是邵志文的个人学术主页，用于分享他的个人经历，项目，学术论文，博客。"
 keywords:
   en: "Zhiwen Shao,Publications,Posts,Research,Face Analysis,Deep Learning,Face Alignment, Facial Expression Recognition"
