--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,6 @@
 - normal:
+    content:  "<strong>2021:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
+- normal:
     content:  "<strong>2021:</strong> <strong>Young Scientists Fund of the National Natural Science Foundation of China</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2021:</strong> <strong>High-Level Talent Program for Innovation and Entrepreneurship (ShuangChuang Doctor) of Jiangsu Province</strong>, <i>Principal Investigator</i>"
