--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -17,7 +17,7 @@
       url:  false
     - name: Rui Yao
       url:  'https://ruiyao.bitbucket.io/'
-  publisher:  'IEEE Transactions on Multimedia, 2022'
+  publisher:  'IEEE Transactions on Multimedia (TMM), 2022'
   status:   '(CCF B, SCI Q2)'
   #place:   'in San Diego, USA'
   desc: 'We propose a novel light-weight anchor-free text detection framework called TextDCT, which adopts the discrete cosine transform (DCT) to encode the text masks as compact vectors. Further, considering the imbalanced number of training samples among pyramid layers, we only employ a single-level head for top-down prediction. To model the multi-scale texts in a single-level head, we introduce a novel positive sampling strategy by treating the shrunk text region as positive samples, and design a feature awareness module (FAM) for spatial-awareness and scale-awareness by fusing rich contextual information and focusing on more significant features. Moreover, we propose a segmented non-maximum suppression (S-NMS) method that can filter low-quality mask regressions.'
@@ -100,7 +100,7 @@
       url:  'http://www.xuequanlu.com/'
     - name: Lizhuang Ma
       url:  'http://dmcv.sjtu.edu.cn/people'  
-  publisher:  'IEEE Transactions on Affective Computing, 2022'
+  publisher:  'IEEE Transactions on Affective Computing (TAFFC), 2022'
   status:   '(CCF B, SCI Q2)'
   #place:   'in San Diego, USA'
   desc: 'We propose an end-to-end unconstrained facial AU detection framework based on domain adaptation, which transfers accurate AU labels from a constrained source domain to an unconstrained target domain by exploiting labels of AU-related facial landmarks. Specifically, we map a source image with label and a target image without label into a latent feature domain by combining source landmark-related feature with target landmark-free feature. Due to the combination of source AU-related information and target AU-free information, the latent feature domain with transferred source label can be learned by maximizing the target-domain AU detection performance. Moreover, we introduce a novel landmark adversarial loss to disentangle the landmark-free feature from the landmark-related feature by treating the adversarial learning as a multi-player minimax game.'
@@ -164,7 +164,7 @@
       url:  'https://personal.ntu.edu.sg/astjcham/index.html'  
     - name: Jianmin Zheng
       url:  'https://personal.ntu.edu.sg/asjmzheng/'
-  publisher:  'Pattern Recognition, 2022'
+  publisher:  'Pattern Recognition (PR), 2022'
   status:   '(CCF B, SCI Q2)'
   #place:   'in San Diego, USA'
   desc: 'We propose a novel geodesic guided convolution (GeoConv) for AU recognition by embedding 3D manifold information into 2D convolutions. Specifically, the kernel of GeoConv is weighted by our introduced geodesic weights, which are negatively correlated to geodesic distances on a coarsely reconstructed 3D morphable face model. Moreover, based on GeoConv, we further develop an end-to-end trainable framework named GeoCNN for AU recognition.'
@@ -434,7 +434,7 @@
       url:  false
     - name: Lizhuang Ma
       url:  'http://dmcv.sjtu.edu.cn/people'
-  publisher:  'IEEE Transactions on Affective Computing, 2019'
+  publisher:  'IEEE Transactions on Affective Computing (TAFFC), 2019'
   status:   '(CCF B, SCI Q2)'
   #place:   'in San Diego, USA'
   desc: 'We propose an end-to-end deep learning based attention and relation learning framework for AU detection with only AU labels, which has not been explored before. In particular, multi-scale features shared by each AU are learned firstly, and then both channel-wise and spatial attentions are adaptively learned to select and extract AU-related local features. Moreover, pixel-level relations for AUs are further captured to refine spatial attentions so as to extract more relevant local features. Without changing the network architecture, our framework can be easily extended for AU intensity estimation.'
@@ -563,7 +563,7 @@
 - title: 'FVNet: 3D Front-View Proposal Generation for Real-Time Object Detection from Point Clouds'
   date:  'Oct. 2019'
   imgurl: '/images/projects/2019/zhou2019fvnet.png'
-  selected: true
+  selected: false
   authors:
     - name: Jie Zhou
       url:  false
@@ -629,7 +629,7 @@
       url:  'https://zhiwenshao.github.io/'
     - name: Lizhuang Ma
       url:  'http://dmcv.sjtu.edu.cn/people'  
-  publisher:  'IET Computer Vision, 2019'
+  publisher:  'IET Computer Vision (CV), 2019'
   status:   '(CCF C, SCI Q4)'
   #place:   'in San Diego, USA'
   desc: 'We propose a new pipeline of salient-to-inner-to-all to progressively compute the locations of landmarks. Additionally, a feedback process is utilised to improve the robustness of regression. They bring out a pose-invariant shape retrieval method to generate the discriminative initialisation.'
@@ -660,7 +660,7 @@
       url:  false
     - name: Lizhuang Ma
       url:  'http://dmcv.sjtu.edu.cn/people'  
-  publisher:  'Computers & Graphics, 2018'
+  publisher:  'Computers & Graphics (C&G), 2018'
   status:   '(CCF C, SCI Q4)'
   #place:   'in San Diego, USA'
   desc: 'We discuss how to improve initialization by studying a neighborhood representation prior, leveraging neighboring faces to obtain a high-quality initial shape. In order to further improve the estimation precision of each facial landmark, we propose a face-like landmark adjustment algorithm to refine the face shape.'
