--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - normal:
-    content:  "<strong>2022:</strong> <strong>Patent License Project for "Facial Action Unit Recognition Method and Device Based on Joint Learning and Optical Flow Estimation"</strong>, <i>Principal Investigator</i>"
+    content:  "<strong>2022:</strong> <strong>Patent License Project for Facial Action Unit Recognition Method and Device Based on Joint Learning and Optical Flow Estimation</strong>, <i>Principal Investigator</i>"
 - normal:
     content:  "<strong>2022:</strong> <strong>Talent Program for Deputy General Manager of Science and Technology of Jiangsu Province</strong>, <i>Principal Investigator</i>"
 - normal:
