--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -559,6 +559,37 @@
       url:  'https://github.com/ZhiwenShao/ARL-tool'
     #- name: 'site'
     #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'
+    
+- title: 'Facial Action Unit Recognition by Prior and Adaptive Attention'
+  #date:  'Jul. 2020'
+  imgurl: '/images/projects/2022/shao2022facial_ele.png'
+  selected: false
+  authors:
+    - name: <strong>Zhiwen Shao</strong>
+      url:  'https://zhiwenshao.github.io/'
+    - name: Yong Zhou
+      url:  false 
+    - name: Hancheng Zhu
+      url:  'https://zhuhancheng.github.io/'    
+    - name: Wen-Liang Du
+      url:  false
+    - name: Rui Yao
+      url:  'https://ruiyao.bitbucket.io/'  
+    - name: Hao Chen
+      url:  false
+  publisher:  'Electronics, 2022'
+  status:   '(SCI Q4)'
+  #place:   'in London, United Kingdom'
+  desc: 'We propose a novel AU recognition method by prior and adaptive attention. Specifically, we predefine a mask for each AU, in which the locations farther away from the AU centers specified by prior knowledge have lower weights. A learnable parameter is adopted to control the importance of different locations. Then, we element-wise multiply the mask by a learnable attention map, and use the new attention map to extract the AU-related feature, in which AU recognition can supervise the adaptive learning of a new attention map.' 
+  tags:
+    #- name: 'arXiv'
+    #  url:  'https://arxiv.org/abs/2004.09769'
+    - name: 'pdf'
+      url:  'https://www.mdpi.com/2079-9292/11/19/3047/pdf'
+    #- name: 'code'
+    #  url:  'https://github.com/junshutang/EGGAN'
+    #- name: 'site'
+    #  url:  'http://www.sfu.ca/~zhiweid/projects/SIF_project.html'    
 
 - title: 'FVNet: 3D Front-View Proposal Generation for Real-Time Object Detection from Point Clouds'
   date:  'Oct. 2019'
